--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -22,6 +22,9 @@
         padding: 0px 10px;
         border-left: 1px solid #3e3e3e;
         border-right: 1px solid #3e3e3e;
+        @media (max-width: 900px) {
+          display: none;
+        }
       }
       .faq {
         border-right: 1px solid #3e3e3e;
@@ -56,9 +59,13 @@
 
   .hero-section {
     display: flex;
+    flex-wrap: wrap;
     padding: 5px 20px;
     justify-content: space-between;
     align-items: center;
+    @media (max-width: 900px) {
+      justify-content: center;
+    }
 
     .logo {
       display: flex;
@@ -81,10 +88,20 @@
     .contact-header {
       display: flex;
       margin-bottom: 20px;
+      flex-wrap: wrap;
+      @media (max-width: 900px) {
+        justify-content: center;
+        align-items: center;
+      }
+
       .telephone {
         display: flex;
         align-items: center;
         margin-right: 20px;
+        @media (max-width: 900px) {
+          margin-bottom: 15px;
+          margin-top: 10px;
+        }
         .phone-icon {
           font-size: 35px;
           color: #11b67a;
@@ -96,6 +113,9 @@
         display: flex;
         align-items: center;
         margin-right: 20px;
+        @media (max-width: 900px) {
+          margin-bottom: 5px;
+        }
         .email-icon {
           font-size: 35px;
           color: #11b67a;
