--- a/src/components/actualite/actualite.scss
+++ b/src/components/actualite/actualite.scss
@@ -1,14 +1,20 @@
 .actualite {
   display: flex;
   margin-top: 30px;
-  padding: 0px 10px;
-  margin-left: 50px;
+  padding: 0px 5px;
+  margin-left: 40px;
+  flex-wrap: wrap;
+  @media (max-width: 900px) {
+    justify-content: center;
+  }
 
   .event {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 10px;
     padding: 30px 30px;
     font-size: 15px;
     width: 250px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 
     h3 {
       color: #182b49;
@@ -34,40 +40,40 @@
     }
   }
 
-  .blogs {
-    display: flex;
-    justify-content: space-between;
+  .blog {
+    margin-right: 30px;
+    width: 260px;
+    font-size: 14px;
+    line-height: 22px;
+    margin-bottom: 30px;
+    @media (max-width: 900px) {
+      margin-left: 0px;
+      margin-top: 30px;
+    }
 
-    .blog {
-      margin-left: 30px;
-      width: 260px;
-      font-size: 14px;
-      line-height: 22px;
+    img {
+      padding-bottom: 15px;
+    }
 
-      img {
-        padding-bottom: 15px;
-      }
+    h1 {
+      padding-bottom: 15px;
+      color: #182b49;
+    }
 
-      h1 {
-        padding-bottom: 15px;
+    p {
+      font-family: "Roboto", sans-serif;
+      padding-bottom: 15px;
+    }
+
+    span {
+      padding-bottom: 15px;
+      color: #07a159;
+      padding: 5px;
+      cursor: pointer;
+
+      &:hover {
         color: #182b49;
-      }
-
-      p {
-        font-family: "Roboto", sans-serif;
-        padding-bottom: 15px;
-      }
-
-      span {
-        padding-bottom: 15px;
-        color: #07a159;
-        padding: 5px;
-        cursor: pointer;
-
-        &:hover {
-          color: #182b49;
-          text-decoration: underline #182b49;
-        }
+        text-decoration: underline #182b49;
       }
     }
   }
