--- a/src/components/button-scroll/button-scroll.scss
+++ b/src/components/button-scroll/button-scroll.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 80px;
   z-index: 1000;
-  left: 95%;
+  right: 10px;
   width: 50px;
   height: 50px;
   border-radius: 100px;
