--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,12 +7,19 @@
 
   .footer-hero {
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+
+    @media (max-width: 900px) {
+      justify-content: center;
+    }
     .logo-section {
       display: flex;
-      width: 800px;
+      padding-right: 20px;
       border-right: 0.5px solid #969696;
+      @media (max-width: 900px) {
+        border: none;
+      }
 
       .logo-text {
         display: flex;
@@ -34,6 +41,13 @@
 
     p {
       padding: 0px 30px;
+      width: 45%;
+      @media (max-width: 900px) {
+        text-align: center;
+        padding: 0;
+        margin-top: 20px;
+        width: 100%;
+      }
     }
   }
 
@@ -41,10 +55,18 @@
     display: flex;
     margin-top: 30px;
     padding: 0px 20px;
+    flex-wrap: wrap;
+    @media (max-width: 900px) {
+      text-align: center;
+      justify-content: center;
+    }
 
     .info {
       width: 50%;
       padding-top: 10px;
+      @media (max-width: 900px) {
+        width: 100%;
+      }
 
       ul {
         list-style: none;
@@ -55,6 +77,9 @@
     }
 
     .contact {
+      @media (max-width: 900px) {
+        margin-top: 30px;
+      }
       p {
         font-size: 19px;
         color: white;
@@ -68,7 +93,6 @@
         .link {
           margin-top: 10px;
           background-color: #17b27a;
-          width: 200px;
           padding: 10px;
           text-align: center;
           text-decoration: none;
@@ -89,6 +113,10 @@
   align-items: center;
   color: #969696;
   padding: 0px 20px;
+  flex-wrap: wrap;
+  @media (max-width: 900px) {
+    justify-content: center;
+  }
 
   .social {
     .icon {
@@ -96,6 +124,10 @@
       font-size: 20px;
       margin-right: 10px;
       cursor: pointer;
+
+      &:hover {
+        color: white;
+      }
     }
   }
 }
