--- a/src/components/temoignage/temoignage.scss
+++ b/src/components/temoignage/temoignage.scss
@@ -4,6 +4,12 @@
   background-image: url("../../assets/image3.jpg");
   background-size: "100%";
   height: 350px;
+  @media (max-width: 900px) {
+    height: 400px;
+  }
+  @media (max-width: 500px) {
+    height: 500px;
+  }
 
   .container {
     background-color: rgba($color: #182b49, $alpha: 0.9);
@@ -16,12 +22,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
 
       h1 {
         padding-top: 20px;
         padding-bottom: 20px;
         color: white;
         font-family: "Open Sans", sans-serif;
+        @media (max-width: 900px) {
+          font-size: 20px;
+        }
       }
 
       p {
@@ -37,6 +47,9 @@
       justify-content: center;
       align-items: center;
       padding: 0px 200px;
+      @media (max-width: 900px) {
+        padding: 0;
+      }
 
       p {
         text-align: center;
